# soulkit

./: index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/chat/: ChatPanel.tsx
src/components/generator/: GeneratorPanel.tsx  SeedForm.tsx
src/components/layout/: AppShell.tsx  ConsolePopup.tsx  Sidebar.tsx  UniversalCommandBar.tsx
src/components/profile/: HistoryList.tsx  ProfileCard.tsx  ProfileRefinePanel.tsx  ProfileStructuredFieldInput.tsx  ProfileViewer.tsx
src/components/schema/: FieldEditor.tsx  SchemaEditor.tsx
src/components/settings/: SettingsPage.tsx
src/components/studio/: StudioPanel.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Dialog.tsx  Input.tsx  Select.tsx  Slider.tsx  Switch.tsx  Textarea.tsx  Toaster.tsx
src/lib/: defaultPresets.ts  profileIdentity.ts  promptBuilder.ts  storage.ts  utils.ts  workspace.ts
src/services/: anthropic.ts  chat.ts  gemini.ts  openai.ts  provider.ts  schemaAssistant.ts  types.ts
src/stores/: consoleStreamStore.ts  llmBarStore.ts  navigationStore.ts  profileStore.ts  schemaStore.ts  settingsStore.ts  toastStore.ts
src/types/: index.ts
